Finalizando desafio da Tio - site da clínica veterinária

--- a/contato.html
+++ b/contato.html
@@ -1,90 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template - Utilizar como modelo</title>
+    <title>Contato - Clínica Patas & Cuidado</title>
     <link rel="stylesheet" href="base.css">
 </head>
 <body>
     <div class="wrapper">
         <div class="menu">
-     <font color="white">
-      <img src="logo.jpg" style="position: absolute; left: 210px; top: 10%; transform: translateY(-50%);" 
-         width="130">
-      <ul style="margin-top:150px; list-style-type:none; padding:0;">
-        <li><a href="index.html" style="color:rgb(239, 251, 4); text-decoration:none;">Página inicial</a></li><br>
-        <li><a href="sobre.html"style="color:rgb(239, 251, 4); text-decoration:none;">Sobre a clínica</a></li><br>
-        <li><a href="horario.html"style="color:rgb(239, 251, 4); text-decoration:none;">Horário de Atendimento</a></li><br>
-        <li><a href="contato.html"style="color:rgb(239, 251, 4); text-decoration:none;">Contato</a></li><br>
-      </ul>
-    </font>
+            <img src="logo.jpg" alt="Logo Clínica Patas & Cuidado">
+            <ul>
+                <li><a href="index.html">Página inicial</a></li>
+                <li><a href="sobre.html">Sobre a clínica</a></li>
+                <li><a href="horario.html">Horário de Atendimento</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
         </div>
 
-
         <div class="main">
-            <div class="header" style="position: relative; text-align: center;">
-                <h1 style="margin: 0; padding-top: 50px;font-size: 45px;"> Clínica Patas & Cuidado</h1>
-                <img src="imag4.png" style="position: absolute; right: 0px; top: 50%; transform: translateY(-50%);" 
-         width="130">
-
+            <div class="header">
+                <h1>Clínica Patas & Cuidado</h1>
+                <img src="imag4.png" alt="Imagem decorativa">
             </div>
     
             <div class="content">
-                <table border="0" cellspacing="20" width="100%">
-  <tr>
-    <td width="45%" valign="top">
+                <table border="0" style="width:100%; border-collapse:collapse;">
+                    <tr>
+                        <td style="width:50%; vertical-align:top; padding:15px;">
+                            <h3>Informações de Contato</h3>
+                            <p><strong>Telefone:</strong> (11) 1234-5678<br>
+                               <strong>WhatsApp:</strong> (11) 91234-5678</p>
+                            <p><strong>E-mail:</strong> contato@patasecuidado.com.br</p>
+                            <p><strong>Endereço:</strong> Rua Exemplo, 123 - São Paulo, SP</p>
+                            <p><strong>Localização:</strong></p>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.618612870474!2d-46.65556908451849!3d-23.587414768021867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c0b3b6f947%3A0x8f2fa0e2307f1e1d!2sParque%20Ibirapuera!5e0!3m2!1spt-BR!2sbr!4v1677674948393!5m2!1spt-BR!2sbr" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        </td>
+                        <td style="width:50%; vertical-align:top; padding:15px;">
+                            <h2>Entre em Contato</h2>
+                            <form action="#" method="post">
+                                <label for="nome">Nome:</label>
+                                <input type="text" id="nome" name="nome" required>
 
-      <h3>Informações de Contato</h3>
-      <p><strong>Telefone:</strong> (11) 1234-5678 📱 WhatsApp: (11) 91234-5678</p>
-      <p><strong>E-mail:</strong> contato@patasecuidado.com.br</p>
-      <p><strong>Endereço:</strong> Rua Exemplo, 123 - São Paulo, SP</p>
-      <p><strong>Localização:</strong></p>
-      <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.618612870474!2d-46.65556908451849!3d-23.587414768021867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c0b3b6f947%3A0x8f2fa0e2307f1e1d!2sParque%20Ibirapuera!5e0!3m2!1spt-BR!2sbr!4v1677674948393!5m2!1spt-BR!2sbr" 
-        width="100%" 
-        height="200" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy">
-      </iframe>
-    </td>
-        <td width="45%" valign="top">       
-    <h2>Entre em Contato</h2>
-            <form action="#" method="post">
+                                <label for="email">E-mail:</label>
+                                <input type="email" id="email" name="email" required>
 
-  <label for="nome">Nome:</label><br>
-  <input type="text" id="nome" name="nome" required><br><br>
+                                <label for="Assunto">Assunto:</label>
+                                <input type="text" id="Assunto" name="Assunto">
 
+                                <label for="mensagem">Mensagem:</label>
+                                <textarea id="mensagem" name="mensagem" rows="6" required></textarea>
 
-  <label for="email">E-mail:</label><br>
-  <input type="email" id="email" name="email" required><br><br>
-
-  <label for="Assunto">Assunto:</label><br>
-  <input type="text" id="Assunto" name="Assunto"><br><br>
-
-  <label for="mensagem">Mensagem:</label><br>
-  <textarea id="mensagem" name="mensagem" rows="5" cols="40" required></textarea><br><br>
-
-<input type="reset" value="Limpar">
-  <input type="submit" value="Enviar">
-  
-           </form>
-      </td>
-    </tr>
-  </table>
-</div>
+                                <input type="reset" value="Limpar">
+                                <input type="submit" value="Enviar">
+                            </form>
+                        </td>
+                    </tr>
+                </table>
+            </div>
     
             <div class="footer">
-            <font color="white">
-                <Strong>Contato:</Strong>
-                <p>📍 Rua Exemplo, 123 - São Paulo, SP</p>
-                <p>📞 (11) 1234-5678 | 📱 WhatsApp: (11) 91234-5678 | ✉️ contato@patasecuidado.com.br</p>
-                <p>🕒 Seg-Sex: 8h-19h | Sáb: 8h-14h | Dom: Emergência</p>
-  </font>
+                <strong>Contato:</strong><br>
+                📍 Rua Exemplo, 123 - São Paulo, SP<br>
+                📞 (11) 1234-5678 | 📱 WhatsApp: (11) 91234-5678<br>
+                ✉️ contato@patasecuidado.com.br<br>
+                🕒 Seg-Sex: 8h-19h | Sáb: 8h-14h | Dom: Emergência
             </div>
-       </div> 
-</div>
+        </div>
+    </div>
 </body>
 </html>
